--- a/home.html
+++ b/home.html
@@ -33,10 +33,10 @@
     <div class="row">
         <div class="col-2">
 <h1>
-    Welocome
+   Our New Collection
 </h1>
 <p>
-    Success will run after you if you work hard
+   Our new collection is based on close collaboration with designers.
 </p>
 <a href="" class="btn">Shop Now &#8594;</a>
 
