--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
     <div class="row">
         <div class="col-2">
 <h1>
-   Our New Collection
+   Our New Collection and my testing git hub
 </h1>
 <p>
    Our new collection is based on close collaboration with designers.
